Install latest pi-coding-agent & build release image
Update Dockerfile.release to install @mariozechner/pi-coding-agent@latest so the image uses the most recent published package. Adjust dockerize/build.sh to build with Dockerfile.release by default and comment out the Dockerfile.git build command.

--- a/dockerize/Dockerfile.release
+++ b/dockerize/Dockerfile.release
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y zsh git python3 wget && \
     rm -rf /var/lib/apt/lists/*
 
 # Install pi coding agent (as root)
-RUN npm install -g @mariozechner/pi-coding-agent && \
+RUN npm install -g @mariozechner/pi-coding-agent@latest && \
     npm cache clean --force
 
 # Set up workspace
