--- a/dockerize/Dockerfile.git
+++ b/dockerize/Dockerfile.git
@@ -27,6 +27,9 @@ FROM node:current-trixie-slim
 
 # Install stuff
 RUN apt-get update && apt-get install -y zsh git python3 wget curl jq && \
+    (mkdir -p /usr/share/keyrings && curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | tee /usr/share/keyrings/githubcli-archive-keyring.gpg > /dev/null) && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null && \
+    apt-get update && apt-get install -y gh && \
     rm -rf /var/lib/apt/lists/*
 
 # Create user
@@ -44,10 +47,13 @@ ENV HOME=/home/pi
 # Change default shell to zsh for root and pi user
 RUN chsh -s /bin/zsh && chsh -s /bin/zsh pi
 
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
 # Switch to non-root user
 USER pi
 RUN wget -O /home/pi/.zshrc https://grml.org/console/zshrc && wget -O /home/pi/.zshrc.local https://grml.org/console/zshrc.local
 
 # Entrypoint: pass args through to pi
-ENTRYPOINT ["pi"]
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
