--- a/dockerize/pi/agent/settings.json
+++ b/dockerize/pi/agent/settings.json
@@ -1,8 +1,8 @@
 {
   "lastChangelogVersion": "0.51.0",
-  "defaultProvider": "lmstudio",
-  "defaultModel": "openai/gpt-oss-20b",
   "theme": "nightowl",
+  "defaultProvider": "google-antigravity",
+  "defaultModel": "gemini-3-flash",
   "defaultThinkingLevel": "medium",
   "hideThinkingBlock": true,
   "shellPath": "/bin/zsh",
