--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-15, macos-latest]
+        os: [ubuntu-latest, macos-15-intel, macos-latest]
       fail-fast: false
 
     defaults:
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Docker (macOS x86_64)
-        if: matrix.os == 'macos-15'
+        if: matrix.os == 'macos-15-intel'
         uses: docker-practice/actions-setup-docker@master
 
       - name: Setup Docker (macOS arm64)
