--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-13, macos-15]
+        os: [ubuntu-latest, macos-15]
       fail-fast: false
 
     defaults:
@@ -26,9 +26,10 @@ jobs:
 
       - name: Setup Docker (macOS)
         if: runner.os == 'macOS'
-        uses: abiosoft/colima-action@v1
-        with:
-          colima-args: "--cpu 2 --memory 4 --vm-type qemu"
+        run: |
+          brew install docker colima
+          colima start --cpu 2 --memory 4 --vm-type qemu
+          echo "DOCKER_HOST=unix://${HOME}/.colima/default/docker.sock" >> $GITHUB_ENV
 
       - name: Verify Environment
         run: |
