--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-15-intel]
+        os: [ubuntu-latest, macos-15]
       fail-fast: false
 
     defaults:
@@ -25,11 +25,28 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Docker (macOS)
-        if: runner.os == 'macOS'
+        if: matrix.os == 'macos-15'
         run: |
           brew install docker colima
-          colima start --cpu 2 --memory 4
-          echo "DOCKER_HOST=unix://${HOME}/.colima/default/docker.sock" >> $GITHUB_ENV
+          # Use the 'vz' virtualization framework (native Apple Silicon)
+          # which is significantly more stable and faster than QEMU on GHA.
+          colima start --cpu 2 --memory 4 --vm-type vz --vz-rosetta
+          
+          # Ensure DOCKER_HOST is set correctly
+          DOCKER_SOCK="unix://${HOME}/.colima/default/docker.sock"
+          echo "DOCKER_HOST=$DOCKER_SOCK" >> $GITHUB_ENV
+          
+          # Wait for Docker to be ready
+          echo "Waiting for Docker daemon to start..."
+          for i in {1..30}; do
+            if docker info >/dev/null 2>&1; then
+              echo "Docker is ready!"
+              exit 0
+            fi
+            sleep 10
+          done
+          echo "Docker failed to start within 5 minutes"
+          exit 1
 
       - name: Verify Environment
         run: |
