feat(docker): add sudo support with configurable password
Install sudo and gosu in both Dockerfiles, add pi user to sudo group.
Entrypoint now runs as root to set the pi user password via chpasswd,
then drops privileges with gosu. Password is configurable via
PI_SUDO_PASSWORD env var; if unset, a random password is generated
and displayed at container startup.

--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,7 @@ BOT_GH_TOKEN=
 BOT_SENTRY_TOKEN=
 BOT_GIT_NAME=
 BOT_GIT_EMAIL=
+PI_SUDO_PASSWORD=
 ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
 GEMINI_API_KEY=
