chore(docker): install pytest in git and release images

--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -29,7 +29,8 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 RUN uv python install --default && \
     ln -sf $(uv python find) /usr/local/bin/python3 && \
     ln -sf /usr/local/bin/python3 /usr/local/bin/python && \
-    uv tool install autopep8
+    uv tool install autopep8 && \
+    uv tool install pytest
 
 # Install ghcli
 RUN (mkdir -p /usr/share/keyrings && curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | tee /usr/share/keyrings/githubcli-archive-keyring.gpg > /dev/null) && \
