--- a/Dockerfile.git
+++ b/Dockerfile.git
@@ -26,7 +26,7 @@ RUN cd packages/coding-agent && npm pack && mv mariozechner-pi-coding-agent-*.tg
 FROM node:current-trixie-slim
 
 # Install stuff
-RUN apt-get update && apt-get install -y zsh git python3 wget curl jq sudo gosu && \
+RUN apt-get update && apt-get install -y zsh git python3 python3-pytest wget curl jq sudo gosu && \
     (mkdir -p /usr/share/keyrings && curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | tee /usr/share/keyrings/githubcli-archive-keyring.gpg > /dev/null) && \
     echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null && \
     apt-get update && apt-get install -y gh && \
